style.css
* {
    margin: 0px;
    padding: 0px;
}

body {
    display: flex;
    flex-direction: column;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}


.blue-part {
    background-color: #1F2937;
}

h1 {
    font-size: 48px;
    font-weight: 900px;
    color: #F9FAF8;
}

.hero-secondary {
    font-size: 18px;
    color: #E5E7EB;
}

.logo {
    display: flex;
    flex: 1;
    font-size: 24px;
    font-weight: bold;
    margin-left: 190px;
    
}

nav {
    display: flex;
    flex: 1;
    justify-content: space-around;
    align-items: center;
    padding: 16px;
}

.right-links {
    display: flex;
    flex: 0 1 0;
    justify-content: flex-end;
    align-items: center;
    flex: 1;
    gap: 10px;
    margin-right: 190px;
}

a {
    text-decoration: none;
    color: #F9FAF8;
}

.main-heading {
    display: flex;
    justify-content: space-around;
    align-items: center;
    flex: 1;
    padding-top: 100px;
    padding-bottom: 100px;
    
}

.left-side {
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    gap: 10px;
    align-items: flex-start;
    flex: 1;
    margin-right: auto;
    margin-left: 200px;
    max-width: 380px;
}

button {
    background-color: #3882F6;
    color: white;
    font-weight: bold;
    padding: 4px 12px;
    border-radius: 7px;
}

.main-image {
    display: flex;
    flex: 1;
    justify-content: center;
    margin: auto;
}


.main-body {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding-bottom: 100px;
}

.main-body h2 {
    font-size: 32px;
    font-weight: 900;
    color: #1F2937;
    display: flex;
    justify-content: center;
    padding-top: 40px;
    padding-bottom: 60px ;
} 



.small-pics {
    display: flex;
    flex-wrap: wrap;
    flex: 1;
    justify-content: center;
    align-items: center;
    text-align: center;
    padding-left: 100px;
    padding-right: 100pxs;
    gap: 80px;
    margin-bottom: 0px;
}

.small-pics img {
    height: 200px;
    width: 200px;
    border-radius: 7px;
    border: 2px #3882F6 solid;
}

.small-pics figcaption {
    display: flex;
    flex: 1;
    flex-wrap: wrap;
    width: 200px;
    text-align: center;
}


.quote blockquote {
    background-color: #E5E7EB;
    display: flex;
    flex: 1;
    flex-wrap: wrap;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding-top: 100px;
}


blockquote h3 {
    width: 800px;
    text-align: center;
    color: #1f2937;
    font-style: italic;
    font-size: 36px;
    font-weight: 300;
}

.quote p {
    display: flex;
    flex: 1;
    justify-content: flex-end;
    background-color: #E5E7EB;
    padding-right: 300px;
    font-weight: bold;
    padding-bottom: 100px;
}

.ending {
    display: flex;
    flex: 1;
    justify-content: center;
    align-items: center;
    gap: 50px;
    margin: auto;
    padding: 40px 5px;
    background-color: #3882F6;
    border-radius: 10px;
    width: 800px;
    color: white;
}

footer {
    display: flex;
    flex: 0 1 0;
    justify-content: center;
    align-items: center;
    background-color: #1F2937;
    color: white;
    font-size: small;
    padding-top: 23px;
    padding-bottom: 23px;
}

.end-box {
    padding-top: 100px;
    padding-bottom: 100px;
}

